Reorganizacion de archivo a la carpeta "vistas"

--- a/Vistas/Principal.html
+++ b/Vistas/Principal.html
@@ -292,7 +292,7 @@
         &copy; Copyright <strong><span>Artemis Academy</span></strong>. Derechos Reservados
       </div>
       <div class="credits">
-        Diseñado Por Darlyn Talia
+        Diseñado Por NeoTech
       </div>
     </div>
   </footer><!-- End Footer -->
